--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@tailwindcss/vite": "^4.1.13",
     "daisyui": "^5.1.10",
     "firebase": "^12.2.1",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.1",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-multi-carousel": "^2.8.6",
     "react-router": "^7.9.1",
+    "react-slick": "^0.31.0",
     "react-tooltip": "^5.29.1",
     "sweetalert2": "^11.23.0",
     "tailwindcss": "^4.1.13"
